# tag-sentinel

./: .gitignore  CHANGELOG.md  DISTRIBUTION.md  EXIT_CODES.md  README.md  alembic.ini  interactive_test.py  openaudit.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test-seeds.txt  test_detectors_example.py  test_real_website.py  test_schema.json
alembic/: env.py
alembic/versions/: 75ec8efb26cc_initial_persistence_schema.py
app/: __init__.py
app/api/: __init__.py  main.py  persistence.py  runner_integration.py  scheduling.py
app/api/auth/: __init__.py  config.py  dependencies.py  exceptions.py  middleware.py  models.py  providers.py
app/api/monitoring/: __init__.py  alerts.py  exporters.py  health.py  metrics.py  middleware.py
app/api/performance/: __init__.py  background_tasks.py  caching.py  optimization.py  pooling.py
app/api/persistence/: __init__.py  database_repositories.py  factory.py  file_repositories.py  models.py  repositories.py
app/api/protection/: __init__.py  middleware.py  policies.py  rate_limiter.py  storage.py
app/api/routes/: __init__.py  artifacts.py  audits.py  exports.py
app/api/schemas/: __init__.py  exports.py  requests.py  responses.py
app/api/services/: __init__.py  audit_service.py  export_service.py
app/audit/: __init__.py  crawler.py
app/audit/capture/: __init__.py  browser_factory.py  config.py  console_observer.py  cookie_collector.py  engine.py  network_observer.py  page_session.py  presteps.py
app/audit/config/: __init__.py  (+1 more)
app/cli/: __init__.py  config.py  main.py  progress.py  runner.py  schedule.py  summary.py
app/persistence/: __init__.py  config.py  dao.py  database.py  exports.py  integration.py  models.py  retention.py  storage.py
app/scheduling/: __init__.py  audit_integration.py  blackout.py  cron.py  dispatch.py  environments.py  locks.py  metrics.py  models.py  scheduler.py  service.py
app/ui/: __init__.py
config/: capture.yaml  crawl.yaml  detectors.yaml  environments.yaml  privacy.yaml
examples/: basic_crawl_example.py  datalayer_example.py
examples/rules/: example-rules.yaml  rules-schema-v0.1.json
tests/: README.md  __init__.py  conftest.py  test_runner.py
tests/api/: test_api_endpoints.py  test_api_endpoints_comprehensive.py  test_audit_service.py  test_export_service.py  test_integration_workflows.py  test_repositories.py  test_schemas.py
tests/integration/: conftest.py  test_datalayer_browser_scenarios.py  test_datalayer_integration.py  test_datalayer_validation_scenarios.py  test_epic1_integration.py  test_privacy_workflows.py  test_rules_integration.py
tests/persistence/: conftest.py  test_dao.py  test_exports.py  test_integration.py  test_retention.py  test_storage.py
tests/unit/: test_browser_factory.py  test_capture_engine.py  test_capture_models.py  test_frontier_queue.py  test_frontier_queue_race_condition.py  test_models.py  test_network_observer.py  test_rate_limiter_circuit_breaker.py  test_scope_matcher.py  test_url_normalizer.py
(+122 files in other folders)
