[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tag-sentinel"
version = "1.0.0"
description = "Open source web analytics auditing and monitoring platform"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Tag Sentinel Contributors"}
]
keywords = ["web analytics", "auditing", "ga4", "gtm", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.11.7,<3.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "aiofiles>=24.1.0,<25.0.0",

    # Configuration and data handling
    "PyYAML>=6.0.2,<7.0.0",
    "httpx>=0.28.1,<1.0.0",
    "psutil>=6.0.0,<7.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "email-validator>=2.0.0,<3.0.0",

    # Scheduling dependencies
    "croniter>=1.4.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",

    # CLI dependencies
    "click>=8.0.0,<9.0.0",
    "typer>=0.9.0,<1.0.0",

    # Playwright for browser automation
    "playwright>=1.55.0,<2.0.0",

    # Optional: Bloom filter for memory-efficient deduplication
    "pybloom-live>=3.0.0,<4.0.0",

    # Database support
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",

    # Authentication support
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=42.0.0,<43.0.0",

    # Performance optimization
    "brotli>=1.1.0,<2.0.0",
    "msgpack>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.17.1,<2.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
openaudit = "app.cli.main:cli_main"
tag-sentinel = "app.cli.main:cli_main"

[project.urls]
Homepage = "https://github.com/tag-sentinel/tag-sentinel"
Repository = "https://github.com/tag-sentinel/tag-sentinel"
Issues = "https://github.com/tag-sentinel/tag-sentinel/issues"
Documentation = "https://tag-sentinel.readthedocs.io"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]